prod_snapshot_2015-09-24_1030/objects/Survey_Results__c.object
<CustomObject>
    <fields>
        <fullName>Business_Goals__c</fullName>
        <inlineHelpText>The business goals I want to drive are:</inlineHelpText>
        <label>Business Goals</label>
        <picklist>
            <picklistValues>
                <fullName>Get New Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promote an Event or Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Awareness of my Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel During My High Season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ensure a Consistent Stream of Customers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup relationship with contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coupon_Code__c</fullName>
        <label>Coupon Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customers_within__c</fullName>
        <inlineHelpText>Based upon the location above, my customers are within:</inlineHelpText>
        <label>Customers Within</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Places__c</fullName>
        <label>Google Places</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Budget__c</fullName>
        <inlineHelpText>What is your monthly budget?</inlineHelpText>
        <label>Monthly Budget</label>
        <picklist>
            <picklistValues>
                <fullName>$0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$3,000</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PPC__c</fullName>
        <label>PPC</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Print__c</fullName>
        <label>Print</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEO__c</fullName>
        <label>SEO</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Media_2__c</fullName>
        <label>Social Media</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Field_2__c</fullName>
        <label>Test Field 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_spent_weekly_on_marketing_activitie__c</fullName>
        <inlineHelpText>How much time per week can you spend on marketing activities?</inlineHelpText>
        <label>Time on Marketing</label>
        <picklist>
            <picklistValues>
                <fullName>No Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 hours</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Business__c</fullName>
        <inlineHelpText>What kind of business do you have?</inlineHelpText>
        <label>Type of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Contracting and repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home furniture and equipment stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation and organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant and bars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service - B2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation shops and repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>URL_for_website__c</fullName>
        <inlineHelpText>Please enter the URL for your website</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Use_Would_use_website_for__c</fullName>
        <inlineHelpText>I use/would use my website for:</inlineHelpText>
        <label>Use/Would use website for</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Commerce</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Website_Development__c</fullName>
        <label>Website Development</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_of_Target_Customers__c</fullName>
        <inlineHelpText>The customers I want to reach are in or around:</inlineHelpText>
        <label>Zip of Target Customers</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>website__c</fullName>
        <inlineHelpText>Do you have a website?</inlineHelpText>
        <label>Website</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Survey Results</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Survey Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Results</pluralLabel>
    <recordTypes>
        <fullName>Cancellation_Survey</fullName>
        <active>true</active>
        <label>Cancellation Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Decision_Engine</fullName>
        <active>true</active>
        <label>Decision Engine</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>